# AskMe

./: pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: qna.py
